Test/dafny0/ParallelResolveErrors.dfy.expect
ParallelResolveErrors.dfy(217,6): Warning: the modify statement with a block statement is deprecated
ParallelResolveErrors.dfy(247,7): Warning: the ... refinement feature in statements is deprecated
ParallelResolveErrors.dfy(248,10): Warning: the ... refinement feature in statements is deprecated
ParallelResolveErrors.dfy(249,13): Warning: the ... refinement feature in statements is deprecated
ParallelResolveErrors.dfy(255,6): Warning: the modify statement with a block statement is deprecated
ParallelResolveErrors.dfy(256,9): Warning: the ... refinement feature in statements is deprecated
ParallelResolveErrors.dfy(263,7): Warning: the ... refinement feature in statements is deprecated
ParallelResolveErrors.dfy(264,10): Warning: the ... refinement feature in statements is deprecated
ParallelResolveErrors.dfy(271,6): Warning: the modify statement with a block statement is deprecated
ParallelResolveErrors.dfy(272,9): Warning: the ... refinement feature in statements is deprecated
ParallelResolveErrors.dfy(279,7): Warning: the ... refinement feature in statements is deprecated
ParallelResolveErrors.dfy(280,10): Warning: the ... refinement feature in statements is deprecated
ParallelResolveErrors.dfy(281,13): Warning: the ... refinement feature in statements is deprecated
ParallelResolveErrors.dfy(287,6): Warning: the modify statement with a block statement is deprecated
ParallelResolveErrors.dfy(288,9): Warning: the ... refinement feature in statements is deprecated
ParallelResolveErrors.dfy(26,8): Error: assignment to non-ghost variable is not allowed in this context, because the statement is in a ghost context; e.g., it may be guarded by a specification-only expression
ParallelResolveErrors.dfy(8,6): Error: a forall statement is not allowed to update a variable it doesn't declare
ParallelResolveErrors.dfy(25,6): Error: a forall statement is not allowed to update a variable it doesn't declare
ParallelResolveErrors.dfy(26,6): Error: a forall statement is not allowed to update a variable it doesn't declare
ParallelResolveErrors.dfy(36,6): Error: LHS of assignment must denote a mutable variable
ParallelResolveErrors.dfy(48,15): Error: new allocation not supported in aggregate assignments
ParallelResolveErrors.dfy(55,19): Error: a non-labeled 'break' statement is allowed only in loops
ParallelResolveErrors.dfy(62,21): Error: a non-labeled 'break' statement is allowed only in loops
ParallelResolveErrors.dfy(63,20): Error: a 'break break' statement is allowed only in loops
ParallelResolveErrors.dfy(64,26): Error: break label is undefined or not in scope: OutsideLoop
ParallelResolveErrors.dfy(73,24): Error: a 'break break' statement is allowed only in contexts with 2 enclosing loops, but the current context only has 1
ParallelResolveErrors.dfy(74,30): Error: break label is undefined or not in scope: OutsideLoop
ParallelResolveErrors.dfy(85,26): Error: a 'break break' statement is allowed only in contexts with 2 enclosing loops, but the current context only has 1
ParallelResolveErrors.dfy(86,32): Error: break label is undefined or not in scope: WhileOutsideForall
ParallelResolveErrors.dfy(105,11): Error: assignment to non-ghost field is not allowed in this context, because this is a ghost method
ParallelResolveErrors.dfy(129,15): Error: a forall statement is not allowed to use 'new'
ParallelResolveErrors.dfy(130,15): Error: a forall statement is not allowed to use 'new'
ParallelResolveErrors.dfy(130,21): Error: in a forall statement, calls are allowed only to lemmas
ParallelResolveErrors.dfy(131,15): Error: a forall statement is not allowed to use 'new'
ParallelResolveErrors.dfy(131,21): Error: in a forall statement, calls are allowed only to lemmas
ParallelResolveErrors.dfy(132,15): Error: a forall statement is not allowed to use 'new'
ParallelResolveErrors.dfy(132,21): Error: in a forall statement, calls are allowed only to lemmas
ParallelResolveErrors.dfy(133,24): Error: in a forall statement, calls are allowed only to lemmas
ParallelResolveErrors.dfy(134,22): Error: in a forall statement, calls are allowed only to lemmas
ParallelResolveErrors.dfy(143,7): Error: cannot assign to array element in a ghost context
ParallelResolveErrors.dfy(149,31): Error: in a forall statement, calls are allowed only to lemmas
ParallelResolveErrors.dfy(154,31): Error: in a forall statement, calls are allowed only to lemmas
ParallelResolveErrors.dfy(162,6): Error: print statement is not allowed in this context (because this is a ghost method or because the statement is guarded by a specification-only expression)
ParallelResolveErrors.dfy(178,12): Error: in a forall statement, calls are allowed only to lemmas
ParallelResolveErrors.dfy(174,6): Error: a forall statement is not allowed to update a variable it doesn't declare
ParallelResolveErrors.dfy(176,6): Error: a forall statement is not allowed to update a variable it doesn't declare
ParallelResolveErrors.dfy(178,6): Error: a forall statement is not allowed to update a variable it doesn't declare
ParallelResolveErrors.dfy(190,18): Error: return statement is not allowed in this context (because it is guarded by a specification-only expression)
ParallelResolveErrors.dfy(251,10): Error: break statement in skeleton is not allowed to break outside the skeleton fragment
ParallelResolveErrors.dfy(253,10): Error: break statement in skeleton is not allowed to break outside the skeleton fragment
ParallelResolveErrors.dfy(267,10): Error: break statement in skeleton is not allowed to break outside the skeleton fragment
ParallelResolveErrors.dfy(269,10): Error: break statement in skeleton is not allowed to break outside the skeleton fragment
ParallelResolveErrors.dfy(283,10): Error: continue statement in skeleton is not allowed to break outside the skeleton fragment
ParallelResolveErrors.dfy(285,10): Error: continue statement in skeleton is not allowed to break outside the skeleton fragment
39 resolution/type errors detected in ParallelResolveErrors.dfy
